--- a/epos-git-domaci-master/kontakt.html
+++ b/epos-git-domaci-master/kontakt.html
@@ -11,6 +11,7 @@
   <link href="css/font-awesome.css" rel="stylesheet">
   <link href="css/ionicons.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  
 </head>
 <body>
   <!-- Header stranice -->
@@ -93,7 +94,7 @@
     				</div>
 
     				<div class="form-group">
-    				<input type="submit" value="Posalji" class="btn btn-success btn-block">
+    				<input type="submit" onclick="notifikacija()" value="Posalji" class="btn btn-success btn-block">
     				<i class="fa fa-paper-plane send-icon"></i>
     				</div>
     			</form>
@@ -403,6 +404,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
     });
 </script>
-
+<script src="../epos-git-domaci-master/js/kontakt.js"></script>
 </body>
 </html>
